fix bag with null and z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,7 +38,7 @@ a,button{
     position: fixed;
     background-color: rgba($color: #000000, $alpha: .3);
     display: none;
-
+    z-index: 5;
     &--active{
         display: block;
     }
@@ -53,7 +53,8 @@ a,button{
         align-items: center;
         justify-content: space-evenly;
         min-height: 300px;
-        border-radius: 5px;
+        z-index: 5;
+    border-radius: 5px;
     }
       
     
